--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         font-family: 'Baloo Bhai 2', cursive;
         margin: 0px;
         padding: 0px;
-        background: url(img/1.jpg); 
+        background: url(1.jpg); 
         color: rgb(253, 253, 253);   
     }
     .left{
@@ -97,7 +97,7 @@
 <body>
     <header>
         <div class="left">
-            <img src="img/2.png" alt="">
+            <img src="2.png" alt="">
             <div>Fit Club</div>
         </div>
         <div class="mid">
